service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnix-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
